--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@ span {
     font-size: calc(1.375rem);
     font-family: Roboto, sans-serif;
     text-transform: uppercase;
+    color: red;
 }
 .btns {
     min-width: 285px;
