--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@ img {
     border-radius: 100%;
 }
 span {
+    background: -webkit-linear-gradient(top, rgb(255, 255, 255), rgb(165, 165, 165)) text;
+    -webkit-text-fill-color: transparent;
     padding-top: 20px;
     font-weight: 400;
     letter-spacing: 2px;
